	* optimized disk cache to work with large caches
	* support variable number of optimistic unchoke slots and to dynamically
	  adjust based on the total number of unchoke slots
	* support for BitTyrant choker algorithm
	* support for automatically start torrents when they receive an
	  incoming connection
	* added more detailed instrumentation of the disk I/O thread

	* fixed build issue on windows related to GetCompressedSize()
	* fixed deadlock when starting torrents with certain invalid tracker URLs
	* fixed iterator bug in disk I/O thread
	* fixed FIEMAP support on linux
	* fixed strict aliasing warning on gcc
	* fixed inconsistency when creating torrents with symlinks
	* properly detect windows version to initialize half-open connection limit
	* fixed bug in url encoder where $ would not be encoded

0.15 release

	* introduced a session state save mechanism. load_state() and save_state().
	  this saves all session settings and state (except torrents)
	* deprecated dht_state functions and merged it with the session state
	* added support for multiple trackers in magnet links
	* added support for explicitly flushing the disk cache
	* added torrent priority to affect bandwidth allocation for its peers
	* reduced the number of floating point operations (to better support
	  systems without FPU)
	* added new alert when individual files complete
	* added support for storing symbolic links in .torrent files
	* added support for uTorrent interpretation of multi-tracker torrents
	* handle torrents with duplicate filenames
	* piece timeouts are adjusted to download rate limits
	* encodes urls in torrent files that needs to be encoded
	* fixed not passing &supportcrypto=1 when encryption is disabled
	* introduced an upload mode, which torrents are switched into when
	  it hits a disk write error, instead of stopping the torrent.
	  this lets libtorrent keep uploading the parts it has when it
	  encounters a disk-full error for instance